<resources>
    <string name="app_name">SehatQApplicationTest</string>

    <!--Preferences-->
    <string name="facebook_app_id">247072360356501</string>
    <string name="fb_login_protocol_scheme">fb247072360356501</string>
    <string name="server_client_id">474294279217&#8211;5u6jh0m1mjghicbontk79pdofpvob0u9.apps.googleusercontent.com</string>

    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="username_empty_error">Username can not be empty</string>
    <string name="password">Password</string>
    <string name="password_empty_error">Password can not be empty</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_fb">Sign In with Facebook</string>
    <string name="sign_in_google">Sign In with Google</string>

    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>

    <string name="search_hint">Cari Product</string>
    <string name="search_empty_result">Pencarian tidak ditemukan</string>

    <string name="share_content">Bagikan product ini</string>
    <string name="choose_app">Pilih aplikasi</string>
    <string name="buy">BUY</string>

    <string name="purchase_history">Purchase History</string>
    <string name="logged_in_as">Hi %1s</string>
    <string name="logout">Logout</string>


</resources>