<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/feed_menu"
        android:title="@string/feed"
        android:icon="@drawable/ic_feed"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/cart_menu"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile_menu"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom"/>

</menu>